examples/kju/positive/two_levels_deep_shadowing.kju
fun f(): Unit {
	var a: Int = 1;

	fun g(): Unit {
		var b: Bool;

		fun h(): Unit {
			var a: Int = 3;
		};
	};
}

fun kju(): Unit {}
