examples/kju/negative/typeChecker/assignment.kju
fun kju(): Unit
{
	var a: Int;
	var b: Bool;
	a = 10;
	b=a;
}
